# barretenberg-sys

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
barretenberg/common/: streams.hpp
barretenberg/examples/: c_bind.cpp  c_bind.hpp
barretenberg/numeric/uint128/: uint128.hpp
barretenberg/plonk/proof_system/types/: polynomial_manifest.hpp
barretenberg/srs/: c_bind.cpp
src/: lib.rs  main.rs
src/acir_proofs/: acir_composer.rs  mod.rs  test.rs
src/buffer/: mod.rs
src/srs/: mod.rs  netsrs.rs
