[package]
name = "barretenberg-sys"
version = "0.2.0"
description = "FFI bindings to Barretenberg"
authors = ["The Noir Team <team@noir-lang.org>"]
repository = "https://github.com/noir-lang/barretenberg-sys/"
edition = "2021"
rust-version = "1.66"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "barretenberg"

[dependencies]
link-cplusplus = "1.0.9"
base64 = "0.21.4"
flate2 = "1.0.27"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"